// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyStatusBar component renders a default message when no message provided 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="m"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      No data found for monitor id mon_id
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPanel>
`;

exports[`EmptyStatusBar component renders a message when provided 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="m"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      foobarbaz
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPanel>
`;
